FIX(header.css): fixed font sizes, gap size.

--- a/assets/styles/blocks/advantages.css
+++ b/assets/styles/blocks/advantages.css
@@ -32,6 +32,14 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .advantages {
+        width: 100%;
+        height: 100%;
+        left: 761px;
+    }
+}
+
 @media (min-width: 400px) {
     .advantages__flex {
         display: flex;
@@ -48,6 +56,7 @@
 @media (min-width: 700px) {
     .advantages__flex {
         min-height: 373px;
+        align-items: center;
     }
 }
 
@@ -55,6 +64,13 @@
     .advantages__flex {
         position: relative;
         min-height: 500px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .advantages__flex {
+        min-height: 1234px;
+        padding: 0;
     }
 }
 
@@ -103,6 +119,14 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .advantages__GirlImage {
+        position: absolute;
+        height: max-content;
+        max-width: unset;
+    }
+}
+
 .advantages__icon {
     width: 35px;
     height: 35px;
@@ -125,7 +149,6 @@
 
 @media (min-width: 700px) {
     .advantages__list {
-        padding-top: 50px;
         height: fit-content;
         width: 53%;
         max-width: 366px;
@@ -194,6 +217,13 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .advantages__ItemDescription {
+        font-size: 24px;
+        line-height: 40px;
+    }
+}
+
 .advantages__title {
     margin-bottom: 4px;
     color: var(--Orange);
@@ -207,6 +237,12 @@
 @media (min-width: 922px) {
     .advantages__title {
         font-size: 11px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .advantages__title {
+        font-size: 18px;
     }
 }
 
@@ -225,11 +261,24 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .advantages__description {
+        font-size: 24px;
+    }
+}
+
 
 @media (min-width: 922px) {
     .AdvantagesItem1 {
         top: 101px;
         left: 47px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .AdvantagesItem1 {
+        top: 223px;
+        left: 273px;
     }
 }
 
@@ -240,6 +289,13 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .AdvantagesItem2 {
+        top: 185px;
+        left: 850px;
+    }
+}
+
 @media (min-width: 922px) {
     .AdvantagesItem3 {
         top: 272px;
@@ -247,10 +303,24 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .AdvantagesItem3 {
+        top: 650px;
+        left: 350px;
+    }
+}
+
 @media (min-width: 922px) {
     .AdvantagesItem4 {
         top: 207px;
         left: 325px;
+    }
+}
+
+@media (min-width: 922px) {
+    .AdvantagesItem4 {
+        top: 500px;
+        left: 850px;
     }
 }
 
@@ -267,6 +337,14 @@
         width: unset;
         bottom: 87px;
         right: 50px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .AdvantagesItem5 {
+        width: max-content;
+        bottom: -250px;
+        left: 750px;
     }
 }
 
