--- a/assets/styles/blocks/header.css
+++ b/assets/styles/blocks/header.css
@@ -36,7 +36,7 @@
     display: flex;
     align-items: center;
     font-family: var(--font-Oswald);
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -48,7 +48,13 @@
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 700px) {
+    .header__logo {
+        font-size: 20px;
+    }
+}
+
+@media (min-width: 1440px) {
     .header__logo {
         font-size: 36px;
     }
@@ -76,7 +82,7 @@
 
 .header__navigation {
     order: 1;
-    width: 9%;
+    width: unset;
     z-index: 3;
 }
 
@@ -90,7 +96,7 @@
     .header__navigation {
         width: fit-content;
         flex: 1;
-        padding-left: 56px;
+        padding-left: 20px;
     }
 }
 
@@ -100,9 +106,9 @@
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1440px) {
     .header__navigation {
-        justify-content: center;
+        justify-content: flex-start;
     }
 }
 
@@ -231,11 +237,11 @@
 
 @media (min-width: 922px) {
     .header__list {
-        gap: 50px;
+        gap: 30px;
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1440px) {
     .header__list {
         gap: 48px;
 
@@ -261,7 +267,6 @@
     position: relative;
     color: var(--Black);
     font-family: var(--font-Poppins);
-    /*font-family: 'PoppinsLight', sans-serif;*/
     font-size: 20px;
     font-weight: 400;
     text-decoration: none;
@@ -269,13 +274,14 @@
 
 @media (min-width: 700px) {
     .header__item {
-        font-size: 15px;
+        font-size: 12px;
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1440px) {
     .header__item {
-        font-size: 18px;
+        font-size: 16px;
+
     }
 }
 
