--- a/assets/styles/blocks/hero.css
+++ b/assets/styles/blocks/hero.css
@@ -32,6 +32,13 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .hero__title {
+        font-size: 120px;
+        line-height: 128px;
+    }
+}
+
 .hero__subtitle {
     max-width: 234px;
     color: #808080;
@@ -63,6 +70,14 @@
         max-width: 400px;
         font-size: 16px;
         line-height: normal;
+    }
+}
+
+@media (min-width: 1440px) {
+    .hero__subtitle {
+        font-size: 24px;
+        line-height: 40px;
+        max-width: 847px;
     }
 }
 
