--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -33,7 +33,8 @@ img {
 
 body {
     min-width: 320px;
-    max-width: 1920px;
+    /*max-width: 1920px;*/
+    /*margin: 0 auto;*/
     font-family: "Oswald","Poppins","BebasNeue", 'PoppinsLight', sans-serif;
     font-weight: 400;
 }
@@ -56,13 +57,25 @@ ul {
     width: 100%;
 }
 
+@media (min-width: 400px) {
+    .container {
+        padding: 0 20px;
+    }
+}
+
 @media (min-width: 576px) {
     .container {
         padding: 0 25px;
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 922px) {
+    .container {
+        padding: 0 35px;
+    }
+}
+
+@media (min-width: 1440px) {
     .container {
         padding: 0 86px 0 160px;
     }
@@ -71,6 +84,12 @@ ul {
 @media (min-width: 922px) {
     .main {
         position: relative;
+    }
+}
+
+@media (min-width: 1440px) {
+    .main {
+        position: unset;
     }
 }
 
@@ -102,7 +121,7 @@ ul {
 .button__styles {
     padding: 5px 15px;
     font-family: var(--font-Poppins);
-    font-size: 12px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -123,7 +142,7 @@ ul {
     }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1440px) {
     .button__styles  {
         font-size: 18px;
         padding: 10px 40px;
